--- a/i18n/messages/en.json
+++ b/i18n/messages/en.json
@@ -57,7 +57,7 @@
         "fifthExtra": " page. I also keep a regularly updated playlist of what I’m listening to — feel free to give it a listen.",
         "Skills": {
             "title": "Skills",
-            "html": "The latest HTML standard, introducing semantic tags and multimedia support for modern web apps.",
+            "html": "The latest HTML standard, introducing semantic tags and multimedia support for modern web.",
             "css": "The newest CSS version, featuring animations, flexbox, grid, and responsive design tools.",
             "js": "A dynamic scripting language for web interactivity, APIs, and frontend/backend development.",
             "ts": "A typed superset of JavaScript that compiles to plain JS, adding static types for better tooling and scalability.",
@@ -68,7 +68,7 @@
             "tailwind": "A utility-first CSS framework for rapid UI development with pre-defined classes.",
             "figma": "A web-based UI/UX design tool for collaborative design, prototyping, and feedback.",
             "jest": "A JavaScript testing framework focused on simplicity, supporting unit and snapshot testing.",
-            "python": "A high-level programming language known for its readability and versatility, widely used in web development, data analysis, and AI.",
+            "python": "A high-level programming language, widely used in web development, data analysis, and AI.",
             "node": "A JavaScript runtime for server-side development, enabling scalable, event-driven apps.",
             "mongo": "A NoSQL database using flexible, JSON-like documents for high-performance data storage.",
             "postgresql": "A powerful open-source relational database with advanced SQL features and scalability.",
@@ -78,7 +78,30 @@
             "rest": "An architectural style for web services using HTTP requests to access and manipulate data.",
             "motion": "A JavaScript library for creating animations and transitions in web applications.",
             "eslint": "A static code analysis tool for identifying and fixing problems in JavaScript/TypeScript code.",
-            "prettier": "An opinionated code formatter for consistent code style across JavaScript, TypeScript, and other languages."
+            "prettier": "An opinionated code formatter for consistent code style across JavaScript, TypeScript, and other languages.",
+            "Categories": {
+                "webdev": "WebDev",
+                "frontend": "Frontend",
+                "backend": "Backend",
+                "fullstack": "FullStack",
+                "devops": "DevOps",
+                "styles": "Styles",
+                "langs": "Langs",
+                "libs": "FW&Libs",
+                "state": "State Management",
+                "design": "Design Tools",
+                "uxui": "UX/UI",
+                "testing": "Testing",
+                "runtime": "Runtime",
+                "databases": "Databases",
+                "nosql": "NoSQL",
+                "sql": "SQL",
+                "tools": "Build Tools",
+                "version": "Version Control",
+                "api": "API Technologies",
+                "animation": "Animation",
+                "quality": "Code Quality"
+            }
         },
         "Experience": {
             "title": "Experience",
