--- a/i18n/messages/ru.json
+++ b/i18n/messages/ru.json
@@ -39,7 +39,7 @@
         "metaDescription": "Александр Гумроян — креативный и увлечённый фронтенд-разработчик, живущий в Чехии 🇨🇿. Он увлечён созданием удобных, доступных и высокопроизводительных веб-приложений.",
         "metaKeywords": "Александр Гумроян, Frontend Software Engineer, Чехия, веб-приложения, удобные, доступные, высокопроизводительные",
         "first": "Привет! Я — Александр Гумроян, разработчик программного обеспечения, увлечённый созданием удобных, доступных и высокопроизводительных веб-приложений.",
-        "second": "Мой основной фокус — фронтенд-разработка с акцентом на React. Я хорошо разбираюсь в JavaScript, TypeScript и CSS и всегда открыт к изучению новых технологий и инструментов. Вне работы я вношу вклад в open-source проекты, делюсь мыслями в своем ",
+        "second": "Мой основной фокус — фронтенд-разработка с акцентом на React. Я хорошо разбираюсь в JavaScript, TypeScript и CSS и всегда открыт к изучению новых технологий и инструментов. Вне работы я вношу вклад в проекты с открытым исходным кодом, делюсь мыслями в своем ",
         "secondLink": "блоге",
         "secondExtra": " и экспериментирую с идеями, которые меня вдохновляют.",
         "imageAlt": "Александр Гумроян в солнечных очках на фоне городского пейзажа, реки и мостов, фон размытый.",
@@ -78,16 +78,39 @@
             "rest": "Архитектурный стиль для веб-сервисов, использующий HTTP-запросы для доступа и манипулирования данными.",
             "motion": "JavaScript-библиотека для создания анимаций и переходов в веб-приложениях.",
             "eslint": "Инструмент статического анализа кода для выявления и исправления проблем в JavaScript/TypeScript.",
-            "prettier": "Инструмент форматирования кода, который автоматически форматирует код в соответствии с заданными правилами."
+            "prettier": "Инструмент форматирования кода, который автоматически форматирует код в соответствии с заданными правилами.",
+            "Categories": {
+                "webdev": "Веб",
+                "frontend": "Фронтенд",
+                "backend": "Бэкенд",
+                "fullstack": "Фуллстек",
+                "devops": "Девопс",
+                "styles": "Стили",
+                "langs": "Языки",
+                "libs": "Библиотека",
+                "state": "Контроль состояния",
+                "design": "Дизайн",
+                "uxui": "UX/UI",
+                "testing": "Тестирование",
+                "runtime": "Среда",
+                "databases": "Базы данных",
+                "nosql": "NoSQL",
+                "sql": "SQL",
+                "tools": "Средства сборки",
+                "version": "Контроль версий",
+                "api": "API Технологии",
+                "animation": "Анимации",
+                "quality": "Качество кода"
+            }
         },
         "Experience": {
             "title": "Опыт работы",
             "position1": "Редактор веб-контента",
             "date1": "Октябрь 2018 – Май 2020",
-            "description1": "Редактировал и управлял контентом, обеспечивая точность и единообразие для крупных клиентов, таких как Microsoft и Ford.",
+            "description1": "Редактировал веб-контент, обеспечивая точность и единообразие для клиентов: Microsoft, Ford и др.",
             "position2": "Инженер по исследованиям и разработкам",
             "date2": "Июнь 2020 – Сегодня",
-            "description2": "Работаю над несколькими проектами, в первую очередь над проектом Turris, который направлен на обеспечение сетевой безопасности и конфиденциальности."
+            "description2": "Работаю над проектом Turris, который обеспечивает сетевую безопасность и конфиденциальность."
         },
         "Activities": {
             "title": "Досуг",
